Work on a new menu Fixes #164

--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -116,7 +116,7 @@
       <!-- End Google Tag Manager (noscript) -->
     {% endif %}
 
-    {% include 'tailwind/menu.html' %}
+    {% include 'tailwind/menew.html' %}
 
     <main class="pt-8 pb-12 lg:pt-16 lg:pb-20">
       <section class="px-4 sm:px-6 lg:px-8">
