--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -12,8 +12,6 @@
           </a>
         </div>
 
-        {% include 'tailwind/featured_flyout.html' %}
-
         <div class="-mr-2 -my-2 md:hidden">
           {% include 'tailwind/theme_buttons.html' %}
 
@@ -98,7 +96,220 @@
       </div>
     </div>
 
-    <div x-show="open" x-transition:enter="duration-200 ease-out" x-transition:enter-start="opacity-0 scale-95" x-transition:enter-end="opacity-100 scale-100" x-transition:leave="duration-100 ease-in" x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-95" x-description="Mobile menu, show/hide based on mobile menu state." class="absolute z-30 top-0 inset-x-0 p-2 transition origin-top-right md:hidden" x-ref="panel" @click.away="open = false">
+  <div x-show="open" x-transition:enter="duration-200 ease-out" x-transition:enter-start="opacity-0 scale-95" x-transition:enter-end="opacity-100 scale-100" x-transition:leave="duration-100 ease-in" x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-95" x-description="Mobile menu, show/hide based on mobile menu state." class="relative max-w-xs w-full bg-white shadow-xl pb-12 flex flex-col overflow-y-auto" x-ref="panel" @click.away="open = false">
+    <div class="px-4 pt-5 pb-2 flex">
+      <button type="button" class="bg-gray-50 dark:bg-jumbo-800 rounded-xl p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-200 dark:hover:bg-jumbo-700 dark:text-jumbo-200 dark:hover:text-jumbo-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-cornflower-500 dark:focus:ring-cornflower-400" @click="open=false">
+        <span class="sr-only">Close menu</span>
+        <svg class="h-6 w-6" x-description="Heroicon name: outline/x" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+        </svg>
+      </button>
+    </div>
+
+    <!-- Links -->
+    <div x-data="{ tab: 'women' }" class="mt-2">
+      <div class="border-b border-gray-200">
+        <div class="-mb-px flex px-4 space-x-8" aria-orientation="horizontal" role="tablist">
+          <!-- Selected: "text-indigo-600 border-indigo-600", Not Selected: "text-gray-900 border-transparent" -->
+          <button x-on:click.prevent="tab = 'women'" class="text-gray-900 border-transparent flex-1 whitespace-nowrap py-4 px-1 border-b-2 text-base font-medium">Women</button>
+
+          <!-- Selected: "text-indigo-600 border-indigo-600", Not Selected: "text-gray-900 border-transparent" -->
+          <button x-on:click.prevent="tab = 'men'" class="text-gray-900 border-transparent flex-1 whitespace-nowrap py-4 px-1 border-b-2 text-base font-medium">Men</button>
+        </div>
+      </div>
+
+      <!-- 'Women' tab panel, show/hide based on tab state. -->
+      <div x-show="tab === 'women'" class="px-4 pt-10 pb-6 space-y-12" role="tabpanel" tabindex="0">
+        <div class="grid grid-cols-1 items-start gap-y-10 gap-x-6">
+          <div class="grid grid-cols-1 gap-y-10 gap-x-6">
+            <div>
+              <p id="mobile-featured-heading-0" class="font-medium text-gray-900">Featured</p>
+              <ul role="list" aria-labelledby="mobile-featured-heading-0" class="mt-6 space-y-6">
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Sleep </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Swimwear </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Underwear </a>
+                </li>
+              </ul>
+            </div>
+            <div>
+              <p id="mobile-categories-heading" class="font-medium text-gray-900">Categories</p>
+              <ul role="list" aria-labelledby="mobile-categories-heading" class="mt-6 space-y-6">
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Basic Tees </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Artwork Tees </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Bottoms </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Underwear </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Accessories </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="grid grid-cols-1 gap-y-10 gap-x-6">
+            <div>
+              <p id="mobile-collection-heading" class="font-medium text-gray-900">Collection</p>
+              <ul role="list" aria-labelledby="mobile-collection-heading" class="mt-6 space-y-6">
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Everything </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Core </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> New Arrivals </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Sale </a>
+                </li>
+              </ul>
+            </div>
+
+            <div>
+              <p id="mobile-brand-heading" class="font-medium text-gray-900">Brands</p>
+              <ul role="list" aria-labelledby="mobile-brand-heading" class="mt-6 space-y-6">
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Full Nelson </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> My Way </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Re-Arranged </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Counterfeit </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Significant Other </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 'Men' tab panel, show/hide based on tab state. -->
+      <div x-show="tab === 'men'" class="px-4 pt-10 pb-6 space-y-12" role="tabpanel" tabindex="0">
+        <div class="grid grid-cols-1 items-start gap-y-10 gap-x-6">
+          <div class="grid grid-cols-1 gap-y-10 gap-x-6">
+            <div>
+              <p id="mobile-featured-heading-1" class="font-medium text-gray-900">Featured</p>
+              <ul role="list" aria-labelledby="mobile-featured-heading-1" class="mt-6 space-y-6">
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Casual </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Boxers </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Outdoor </a>
+                </li>
+              </ul>
+            </div>
+            <div>
+              <p id="mobile-categories-heading" class="font-medium text-gray-900">Categories</p>
+              <ul role="list" aria-labelledby="mobile-categories-heading" class="mt-6 space-y-6">
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Artwork Tees </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Pants </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Accessories </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Boxers </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Basic Tees </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="grid grid-cols-1 gap-y-10 gap-x-6">
+            <div>
+              <p id="mobile-collection-heading" class="font-medium text-gray-900">Collection</p>
+              <ul role="list" aria-labelledby="mobile-collection-heading" class="mt-6 space-y-6">
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Everything </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Core </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> New Arrivals </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Sale </a>
+                </li>
+              </ul>
+            </div>
+
+            <div>
+              <p id="mobile-brand-heading" class="font-medium text-gray-900">Brands</p>
+              <ul role="list" aria-labelledby="mobile-brand-heading" class="mt-6 space-y-6">
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Significant Other </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> My Way </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Counterfeit </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Re-Arranged </a>
+                </li>
+
+                <li class="flex">
+                  <a href="#" class="text-gray-500"> Full Nelson </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    {% comment %} <div x-show="open" x-transition:enter="duration-200 ease-out" x-transition:enter-start="opacity-0 scale-95" x-transition:enter-end="opacity-100 scale-100" x-transition:leave="duration-100 ease-in" x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-95" x-description="Mobile menu, show/hide based on mobile menu state." class="absolute z-30 top-0 inset-x-0 p-2 transition origin-top-right md:hidden" x-ref="panel" @click.away="open = false">
       <div class="rounded-2xl shadow-lg ring-1 ring-black ring-opacity-5 bg-gray-50 dark:bg-jumbo-800 divide-y-2 divide-gray-50 dark:divide-jumbo-200">
         <div class="pt-5 pb-6 px-5 sm:pb-8">
           <div class="flex items-center justify-between">
@@ -152,6 +363,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> {% endcomment %}
   </div>
 </div>
