--- a/khoBlog/templates/tailwind/menew.html
+++ b/khoBlog/templates/tailwind/menew.html
@@ -4,7 +4,7 @@
   <!-- Mobile menu -->
   <div x-show="open" class="relative z-40 lg:hidden" x-description="Off-canvas menu for mobile, show/hide based on off-canvas menu state." x-ref="dialog" aria-modal="true" style="display: none;">
 
-    <div x-show="open" x-transition:enter="transition-opacity ease-linear duration-300" x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100" x-transition:leave="transition-opacity ease-linear duration-300" x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0" x-description="Off-canvas menu backdrop, show/hide based on off-canvas menu state." class="fixed inset-0 bg-black bg-opacity-25" style="display: none;"></div>
+    <div x-transition:enter="transition-opacity ease-linear duration-300" x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100" x-transition:leave="transition-opacity ease-linear duration-300" x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0" x-description="Off-canvas menu backdrop, show/hide based on off-canvas menu state." class="fixed inset-0 bg-black bg-opacity-25" style="display: none;"></div>
 
     <div class="fixed inset-0 flex z-40">
       <div x-show="open" x-transition:enter="transition ease-in-out duration-300 transform" x-transition:enter-start="-translate-x-full" x-transition:enter-end="translate-x-0" x-transition:leave="transition ease-in-out duration-300 transform" x-transition:leave-start="translate-x-0" x-transition:leave-end="-translate-x-full" x-description="Off-canvas menu, show/hide based on off-canvas menu state." class="relative max-w-xs w-full bg-gray-50 dark:bg-jumbo-900 shadow-xl pb-12 flex flex-col overflow-y-auto" @click.away="open = false" style="display: none;">
@@ -148,26 +148,11 @@
 
         <div class="border-t border-gray-200 py-6 px-4 space-y-6">
           <div class="flow-root">
-            <a href="#" class="-m-2 p-2 block font-medium text-gray-900">Company</a>
-          </div>
-
-          <div class="flow-root">
-            <a href="#" class="-m-2 p-2 block font-medium text-gray-900">Stores</a>
-          </div>
-        </div>
-
-        <div class="border-t border-gray-200 py-6 px-4 space-y-6">
-          <div class="flow-root">
             <a href="#" class="-m-2 p-2 block font-medium text-gray-900">Create an account</a>
           </div>
           <div class="flow-root">
             <a href="#" class="-m-2 p-2 block font-medium text-gray-900">Sign in</a>
           </div>
-        </div>
-
-        <div class="border-t border-gray-200 py-6 px-4 space-y-6">
-          <!-- Currency selector -->
-
         </div>
       </div>
     </div>
@@ -175,27 +160,10 @@
 
   <header class="relative">
     <nav aria-label="Top">
-      {% comment %} <!-- Top navigation -->
-      <div class="bg-gray-900">
-        <div class="max-w-7xl mx-auto h-10 px-4 flex items-center justify-between sm:px-6 lg:px-8">
-          <!-- Currency selector -->
-
-          <p class="flex-1 text-center text-sm font-medium text-white lg:flex-none">
-            Get free delivery on orders over $100
-          </p>
-
-          <div class="hidden lg:flex lg:flex-1 lg:items-center lg:justify-end lg:space-x-6">
-            <a href="#" class="text-sm font-medium text-white hover:text-gray-100">Create an account</a>
-            <span class="h-6 w-px bg-gray-600" aria-hidden="true"></span>
-            <a href="#" class="text-sm font-medium text-white hover:text-gray-100">Sign in</a>
-          </div>
-        </div>
-      </div> {% endcomment %}
-
       <!-- navigation -->
       <div class="bg-gray-50 dark:bg-jumbo-900">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-          <div class="border-b border-gray-200">
+        <div class="max-w-7xl mx-auto">
+          <div class="border-b border-gray-200 dark:border-jumbo-700">
             <div class="h-16 flex items-center justify-between">
               <!-- Logo (lg+) -->
               <div class="hidden lg:flex lg:items-center">
@@ -207,7 +175,7 @@
 
               <div class="hidden h-full lg:flex">
                 <!-- Mega menus -->
-                <div class="ml-8">
+                <div class="ml-8  z-50">
                   <div class="h-full flex justify-center space-x-8">
                     <div class="flex" x-data="{ open: false, focus: false }" @keydown.escape="onEscape" @close-popover-group.window="onClosePopoverGroup">
                       <div class="relative flex">
@@ -217,8 +185,8 @@
                       </div>
                       <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0" x-description="'Main' mega menu, show/hide based on flyout menu state." class="absolute top-full inset-x-0 text-gray-400 hover:text-gray-500 dark:text-jumbo-200 dark:hover:text-jumbo-100 sm:text-sm" x-ref="panel" @click.away="open = false" style="display: none;">
                         <!-- Presentational element used to render the bottom shadow, if we put the shadow on the actual panel it pokes out the top, so we use this shorter element to hide the top of the shadow -->
-                        <div class="absolute inset-0 top-1/2 bg-white shadow" aria-hidden="true"></div>
-                        <div class="relative bg-white">
+                        <div class="absolute inset-0 top-1/2 bg-white dark:bg-jumbo-800 shadow" aria-hidden="true"></div>
+                        <div class="relative bg-white dark:bg-jumbo-800">
                           <div class="max-w-7xl mx-auto px-8">
                             <div class="grid grid-cols-2 items-start gap-y-10 gap-x-8 pt-10 pb-12">
                               <div class="grid grid-cols-2 gap-y-10 gap-x-8">
@@ -228,7 +196,7 @@
                                   </p>
                                   <ul role="list" aria-labelledby="desktop-featured-heading-0" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
                                     <li class="flex">
-                                      <a href="#" class="hover:text-gray-800">
+                                      <a href="#" class="text-gray-300 hover:text-gray-800">
                                         Sleep
                                       </a>
                                     </li>
@@ -287,8 +255,8 @@
                       </div>
                       <div x-show="open" x-transition:enter="transition ease-out duration-200" x-transition:enter-start="opacity-0" x-transition:enter-end="opacity-100" x-transition:leave="transition ease-in duration-150" x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0" x-description="'Main' mega menu, show/hide based on flyout menu state." class="absolute top-full inset-x-0 text-gray-400 hover:text-gray-500 dark:text-jumbo-200 dark:hover:text-jumbo-100 sm:text-sm" x-ref="panel" @click.away="open = false" style="display: none;">
                         <!-- Presentational element used to render the bottom shadow, if we put the shadow on the actual panel it pokes out the top, so we use this shorter element to hide the top of the shadow -->
-                        <div class="absolute inset-0 top-1/2 bg-white shadow" aria-hidden="true"></div>
-                        <div class="relative bg-white">
+                        <div class="absolute inset-0 top-1/2 bg-white dark:bg-jumbo-800 shadow" aria-hidden="true"></div>
+                        <div class="relative bg-white dark:bg-jumbo-800">
                           <div class="max-w-7xl mx-auto px-8">
                             <div class="grid grid-cols-2 items-start gap-y-10 gap-x-8 pt-10 pb-12">
                               <div class="grid grid-cols-2 gap-y-10 gap-x-8">
@@ -348,9 +316,6 @@
                         </div>
                       </div>
                     </div>
-
-                    <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">Company</a>
-                    <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">Stores</a>
                   </div>
                 </div>
               </div>
@@ -363,14 +328,6 @@
                     <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"></path>
                   </svg>
                 </button>
-
-                <!-- Search -->
-                <a href="#" class="ml-2 p-2 text-gray-400 hover:text-gray-400 hover:text-gray-500 dark:text-jumbo-200 dark:hover:text-jumbo-100">
-                  <span class="sr-only">Search</span>
-                  <svg class="w-6 h-6" x-description="Heroicon name: outline/search" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-                  </svg>
-                </a>
               </div>
 
               <!-- Logo (lg-) -->
@@ -382,35 +339,17 @@
               <div class="flex-1 flex items-center justify-end">
                 <div class="flex items-center lg:ml-8">
                   <div class="flex space-x-8">
-                    <div class="hidden lg:flex">
-                      <a href="#" class="-m-2 p-2 text-gray-400 hover:text-gray-400 hover:text-gray-500 dark:text-jumbo-200 dark:hover:text-jumbo-100">
-                        <span class="sr-only">Search</span>
-                        <svg class="w-6 h-6" x-description="Heroicon name: outline/search" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-                          <path stroke-linecap="round" stroke-linejoin="round" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-                        </svg>
-                      </a>
-                    </div>
-
                     <div class="flex">
-                      <a href="#" class="-m-2 p-2 text-gray-400 hover:text-gray-400 hover:text-gray-500 dark:text-jumbo-200 dark:hover:text-jumbo-100">
+                      {% include 'tailwind/theme_buttons.html' %}
+                    </div>
+                    <div class="flex">
+                      <a href="#" class="-m-2 p-2 text-gray-400 hover:text-gray-500 dark:text-jumbo-100 dark:hover:text-jumbo-300">
                         <span class="sr-only">Account</span>
                         <svg class="w-6 h-6" x-description="Heroicon name: outline/user" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
                         </svg>
                       </a>
                     </div>
-                  </div>
-
-                  <span class="mx-4 h-6 w-px bg-gray-200 lg:mx-6" aria-hidden="true"></span>
-
-                  <div class="flow-root">
-                    <a href="#" class="group -m-2 p-2 flex items-center">
-                      <svg class="flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-gray-400 hover:text-gray-500 dark:text-jumbo-200 dark:hover:text-jumbo-100" x-description="Heroicon name: outline/shopping-cart" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"></path>
-                      </svg>
-                      <span class="ml-2 text-sm font-medium text-gray-700 group-hover:text-gray-800">0</span>
-                      <span class="sr-only">items in cart, view bag</span>
-                    </a>
                   </div>
                 </div>
               </div>
