--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -72,7 +72,7 @@
     }
 
     .flyout_button {
-        @apply relative z-10 flex items-center transition-colors ease-out duration-200 text-sm font-medium border-b-2 -mb-px pt-px border-transparent text-gray-700 hover:text-gray-800;
+        @apply relative z-10 flex items-center transition-colors ease-out duration-200 text-sm font-medium border-b-2 -mb-px pt-px border-transparent text-gray-700 dark:text-jumbo-100 hover:underline;
     }
 
     .flyout_bottom_items {
