--- a/khoBlog/templates/tailwind/menew.html
+++ b/khoBlog/templates/tailwind/menew.html
@@ -9,7 +9,7 @@
     <div class="fixed inset-0 flex z-40">
       <div x-show="open" x-transition:enter="transition ease-in-out duration-300 transform" x-transition:enter-start="-translate-x-full" x-transition:enter-end="translate-x-0" x-transition:leave="transition ease-in-out duration-300 transform" x-transition:leave-start="translate-x-0" x-transition:leave-end="-translate-x-full" x-description="Off-canvas menu, show/hide based on off-canvas menu state." class="relative max-w-xs w-full bg-gray-50 dark:bg-jumbo-900 shadow-xl pb-12 flex flex-col overflow-y-auto" @click.away="open = false" style="display: none;">
         <div class="px-4 pt-5 pb-2 flex">
-          <button type="button" class="-m-2 p-2 rounded-md inline-flex items-center justify-center text-gray-900" @click="open = false">
+          <button type="button" class="-m-2 p-2 rounded-md inline-flex items-center justify-center hover:bg-gray-300 dark:hover:bg-jumbo-700" @click="open = false">
             <span class="sr-only">Close menu</span>
             <svg class="h-6 w-6" x-description="Heroicon name: outline/x" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
               <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
@@ -162,7 +162,7 @@
     <nav aria-label="Top">
       <!-- navigation -->
       <div class="bg-gray-50 dark:bg-jumbo-900">
-        <div class="max-w-7xl mx-auto">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <div class="border-b border-gray-200 dark:border-jumbo-700">
             <div class="h-16 flex items-center justify-between">
               <!-- Logo (lg+) -->
@@ -322,7 +322,7 @@
 
               <!-- Mobile menu and search (lg-) -->
               <div class="flex-1 flex items-center lg:hidden">
-                <button type="button" x-description="Mobile menu toggle, controls the 'mobileFeatureduOpen' state." class="-ml-2 bg-white p-2 rounded-md text-gray-900" @click="open = true">
+                <button type="button" x-description="Mobile menu toggle, controls the 'mobileFeatureduOpen' state." class="-ml-2 p-2 rounded-md hover:bg-gray-300 dark:hover:bg-jumbo-700" @click="open = true">
                   <span class="sr-only">Open menu</span>
                   <svg class="h-6 w-6" x-description="Heroicon name: outline/menu" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"></path>
@@ -342,14 +342,14 @@
                     <div class="flex">
                       {% include 'tailwind/theme_buttons.html' %}
                     </div>
-                    <div class="flex">
+                    {% comment %} <div class="flex">
                       <a href="#" class="-m-2 p-2 text-gray-900 dark:text-jumbo-100 dark:hover:text-jumbo-300">
                         <span class="sr-only">Account</span>
                         <svg class="w-6 h-6" x-description="Heroicon name: outline/user" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
                           <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
                         </svg>
                       </a>
-                    </div>
+                    </div> {% endcomment %}
                   </div>
                 </div>
               </div>
