--- a/khoBlog/templates/tailwind/featured_posts.html
+++ b/khoBlog/templates/tailwind/featured_posts.html
@@ -1,7 +1,7 @@
 {% for url in urls %}
-  <li class="flow-root">
-    <a href="{{ url.get_absolute_url }}" class="-m-3 p-3 flex items-center rounded-xl text-base font-medium text-jumbo-900 dark:text-jumbo-50 dark:hover:bg-jumbo-700 hover:bg-jumbo-50 transition ease-in-out duration-150">
-      <span>{% firstof url.featured_title url.title %}</span>
+  <li class="flex">
+    <a href="{{ url.get_absolute_url }}" class="text-gray-900 dark:text-jumbo-200 hover:underline">
+      {% firstof url.featured_title url.title %}
     </a>
   </li>
 {% endfor %}
