--- a/khoBlog/templates/tailwind/links_list.html
+++ b/khoBlog/templates/tailwind/links_list.html
@@ -1,11 +1,7 @@
 {% for url in urls %}
-  {% if not dev_class %}
-    <li class="flow-root">
-  {% endif %}
-    <a href="{% if url.index %}{% firstof url.permalink url.content_object.get_index_view_url %}{% else %}{% firstof url.permalink url.content_object.get_absolute_url url.get_content_object_url %}{% endif %}" class="{% if not dev_class %}-m-3 p-3 flex items-center rounded-xl text-base font-medium text-gray-900 dark:text-jumbo-50 hover:bg-gray-200 dark:hover:bg-jumbo-700 transition ease-in-out duration-150{% else %}mobile_menu_grid_items{% endif %}">
-      <span>{% firstof url.featured_title url.title %}</span>
+  <li class="flex">
+    <a href="{{ url.get_absolute_url }}" class="text-gray-900 dark:text-jumbo-200 hover:underline">
+      {% firstof url.featured_title url.title %}
     </a>
-  {% if not dev_class %}
-    </li>
-  {% endif %}
+  </li>
 {% endfor %}
