--- a/khoBlog/templates/tailwind/super_featured_objects.html
+++ b/khoBlog/templates/tailwind/super_featured_objects.html
@@ -1,10 +1,13 @@
+{% load content_type %}
+
 {% for object in objects %}
-  <li class="flow-root">
-    <a href="{{ object.get_absolute_url }}" class="-m-3 p-3 flex rounded-2xl hover:bg-gray-200 dark:hover:bg-jumbo-700 transition ease-in-out duration-150">
+  <li class="flex">
+    <a href="{{ object.get_absolute_url }}" class="group">
       <div class="min-w-0 flex-1">
-        <h4 class="font-medium text-gray-900 dark:text-jumbo-50 truncate">
+        <div class="font-medium group-hover:underline text-gray-900 dark:text-jumbo-50 truncate">
           {% firstof object.featured_title object.title %}
-        </h4>
+        </div>
+        <div class="text-xs">{{ object|to_class_name|capfirst }}</div>
         <p class="mt-1 text-sm text-gray-500 dark:text-jumbo-300">
           {{ object.description }}
         </p>
