--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -2,7 +2,7 @@
 {% load super_buttons markup_tags cards %}
 
 {% block content %}
-  <article class="xl:grid xl:grid-cols-3">
+  <article class="xl:grid xl:grid-cols-3 px-4 sm:px-6 lg:px-8">
     <div class="xl:col-span-2 xl:pr-8">
       <section class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:border-gray-200 dark:xl:border-jumbo-200 xl:pb-6">
         <div>
