--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -75,23 +75,17 @@
         @apply relative z-10 flex items-center transition-colors ease-out duration-200 text-sm font-medium border-b-2 -mb-px pt-px border-transparent text-gray-700 dark:text-jumbo-100 hover:underline;
     }
 
-    .flyout_bottom_items {
-        @apply text-gray-900 dark:text-jumbo-50 rounded-xl p-3 text-base font-medium;
-
-        &.default {
-            @apply hover:bg-gray-200 dark:hover:bg-jumbo-700;
-        }
-
+    .flyout_items {
         &.perm {
-            @apply hover:text-cornflower-900 hover:bg-cornflower-200 dark:hover:bg-cornflower-800 dark:hover:text-cornflower-100;
+            @apply hover:text-cornflower-900 dark:hover:text-cornflower-100;
         }
 
         &.staff {
-            @apply hover:text-yellow-900 hover:bg-yellow-200 dark:hover:bg-yellow-800 dark:hover:text-yellow-200;
+            @apply hover:text-yellow-900 dark:hover:text-yellow-200;
         }
 
         &.admin {
-            @apply flyout_bottom_items hover:text-flamingo-800 hover:bg-flamingo-200 dark:hover:bg-flamingo-800 dark:hover:text-flamingo-100;
+            @apply hover:text-flamingo-800 dark:hover:text-flamingo-100;
         }
     }
 
