Work on a new menu Fixes #164

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,7 +10,7 @@
 {% endblock additional_css %}
 
 {% block content_main %}
-  <article class="xl:grid xl:grid-cols-3 px-4 sm:px-6 lg:px-8">
+  <article class="xl:grid xl:grid-cols-3">
     <div class="xl:col-span-2 xl:pr-8 xl:border-r xl:border-gray-200 dark:xl:border-jumbo-200">
       <nav class="flex justify-between" role="group" aria-label="Previous / Next">
         {% if prev_post %}
