--- a/khoBlog/templates/sub_base_main_block.html
+++ b/khoBlog/templates/sub_base_main_block.html
@@ -5,7 +5,7 @@
   {% block content_main %}{% endblock content_main %}
 
   {% block pagination %}
-    <section class="max-w-2xl mx-auto lg:max-w-7xl py-3 flex items-center justify-between">
+    <section class="py-3 flex items-center justify-between">
       {% if is_paginated %}
         <section class="flex-1 flex justify-between md:hidden">
           {% if page_obj.has_previous %}
