--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -116,14 +116,12 @@
       <!-- End Google Tag Manager (noscript) -->
     {% endif %}
 
-    {% include 'tailwind/menew.html' %}
+    {% include 'tailwind/menu.html' %}
 
     <main class="pt-8 pb-12 lg:pt-16 lg:pb-20">
-      <section class="px-4 sm:px-6 lg:px-8">
-        <section class="max-w-2xl md:max-w-4xl xl:max-w-7xl mx-auto">
-          {% block content %}
-          {% endblock content %}
-        </section>
+      <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        {% block content %}
+        {% endblock content %}
       </section>
     </main>
 
