--- a/pages/templates/pages/default.html
+++ b/pages/templates/pages/default.html
@@ -13,7 +13,7 @@
 
 {% block content %}
   {% if not page.withdrawn or user.is_superuser %}
-    <article class="xl:grid xl:grid-cols-3 px-4 sm:px-6 lg:px-8">
+    <article class="xl:grid xl:grid-cols-3">
       <div class="xl:col-span-2 xl:pr-8">
         <div class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:border-gray-200 dark:xl:border-jumbo-200 xl:pb-6">
           <div>
