--- a/quotes/templates/quotes/person_detail.html
+++ b/quotes/templates/quotes/person_detail.html
@@ -3,8 +3,9 @@
 
 {% block content_main %}
   <a class="hover:underline" href="{% url 'pages:quotes' %}">Go back to quotes list</a>
+  <div class="text-3xl">{{ description }}</div>
 
-  <div class="prose dark:prose-invert lg:prose-lg xl:prose-2xl lg:tracking-wider xl:leading-11 lg:text-3xl xl:text-5xl max-w-7xl">
-    {% display_single_quote quote.slug %}
+  <div class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
+    {% display_quotes_by_person object.slug %}
   </div>
 {% endblock content_main %}
