--- a/khoBlog/templates/tailwind/menu_sections_mobile.html
+++ b/khoBlog/templates/tailwind/menu_sections_mobile.html
@@ -41,7 +41,7 @@
               </ul>
             </div>
           {% endif %}
-          {% if user.is_superuser %}
+          {% if user.is_superuser and not user.secure_mode %}
             <div>
               <p id="desktop-dladminlists-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
                 DL Admin Lists
