--- a/khoBlog/templates/tailwind/user_super_buttons.html
+++ b/khoBlog/templates/tailwind/user_super_buttons.html
@@ -21,9 +21,14 @@
 
           {% if object.is_superuser %}
             <div class="dropdown_item_container" role="none">
-              <a class="dropdown_item" href="{{ object.get_absolute_admin_update_url }}">
-                Edit in Admin
-              </a>
+              {% if object.is_superuser %}
+                <a class="dropdown_item" href="{{ object.get_absolute_update_secure_mode_status_url }}">Secure Mode Status</a>
+              {% endif %}
+              {% if not object.secure_mode %}
+                <a class="dropdown_item" href="{{ object.get_absolute_admin_update_url }}">
+                  Edit in Admin
+                </a>
+              {% endif %}
             </div>
           {% endif %}
         </div>
