--- a/khoBlog/templates/tailwind/mega_menu.html
+++ b/khoBlog/templates/tailwind/mega_menu.html
@@ -42,7 +42,7 @@
               </ul>
             </div>
           {% endif %}
-          {% if user.is_superuser and not user.secure_mode %}
+          {% if user.is_superuser %}
             <div>
               <p id="desktop-dladminlists-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
                 DL Admin Lists
