--- a/khoBlog/templates/tailwind/cards.html
+++ b/khoBlog/templates/tailwind/cards.html
@@ -38,14 +38,14 @@
     {% endif %}
     {% if object.get_superuser_post_count or object.get_post_count or object.get_superuser_post_count or object.get_post_count %}
       <p class="text-sm dark:text-jumbo-100">Post count:
-        {% if context.user.is_superuser and not context.user.secure_mode %}
+        {% if context.user.is_superuser %}
         <strong>{{ object.get_superuser_post_count }}</strong>
         |
         {% endif %}
         {{ object.get_post_count }}
       </p>
       <p class="text-sm dark:text-jumbo-100">Percentage:
-        {% if context.user.is_superuser and not context.user.secure_mode %}
+        {% if context.user.is_superuser %}
         <strong>{{ object.get_superuser_percent_of_posts }}</strong>
         |
         {% endif %}
