--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -7,7 +7,7 @@
         <h1 class="text-xl font-semibold text-gray-900 dark:text-jumbo-100">Tasks</h1>
         <p class="mt-2 text-sm text-gray-700 dark:text-jumbo-50">A list of all the things to do.</p>
       </div>
-      {% if user.is_superuser and not user.secure_mode %}
+      {% if user.is_superuser %}
         <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
           <a href="{% url 'todo:create_task' %}" type="button" role="button" class="inline-flex items-center justify-center rounded-xl border border-transparent bg-cornflower-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-cornflower-500 dark:focus:ring-cornflower-500 focus:ring-offset-2 dark:focus:ring-offset-jumbo-900 sm:w-auto">Add new task</a>
         </div>
@@ -25,7 +25,7 @@
                   <th scope="col" class="todo_header_element">Description</th>
                   <th scope="col" class="todo_header_element">Status</th>
                   <th scope="col" class="todo_header_element">Completion date</th>
-                  {% if user.is_superuser and not user.secure_mode %}
+                  {% if user.is_superuser %}
                     <th scope="col" class="todo_header_element">Withdrawn</th>
                     <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
                       <span class="sr-only">Actions</span>
@@ -41,7 +41,7 @@
                     <td class="todo_element text-gray-500 dark:text-jumbo-50">{{ task.description }}</td>
                     <td class="todo_element {% if task.status == "complete" %}text-tradewind-700 dark:text-tradewind-500{% elif task.status == "wontfix" or task.status == "impossible" %}text-flamingo-600{% else %}text-gray-500 dark:text-jumbo-50{% endif %}">{{ task.get_status_display }}</td>
                     <td class="todo_element text-gray-500 dark:text-jumbo-50">{{ task.completed_date|default:'' }}</td>
-                    {% if user.is_superuser and not user.secure_mode %}
+                    {% if user.is_superuser %}
                       <td class="px-3 py-4 text-sm text-gray-500 dark:text-jumbo-50">{{ task.withdrawn }}</td>
                       <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
                         {% if task.status == "incomplete" %}
