--- a/khoBlog/templates/tailwind/mega_menu.html
+++ b/khoBlog/templates/tailwind/mega_menu.html
@@ -6,59 +6,26 @@
     <div class="grid grid-cols-2 items-start gap-y-10 gap-x-8 pt-10 pb-12">
       <div class="grid grid-cols-2 gap-y-10 gap-x-8">
         <div>
-          <p id="desktop-gosomewhere-heading-0" class="font-medium text-gray-900 dark:text-jumbo-100">
+          <p class="font-medium text-gray-900 dark:text-jumbo-100">
             Go somewhere
           </p>
-          <ul role="list" aria-labelledby="desktop-gosomewhere-heading-0" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
+          <ul role="list" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
             {% links_menu %}
           </ul>
         </div>
-        <div>
-          <p id="desktop-directlinks-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-            Direct links
-          </p>
-          <ul role="list" aria-labelledby="desktop-directlinks-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-            {% mfl_setting "D" %}
-          </ul>
-        </div>
+        {% mfl_setting "D" %}
       </div>
       {% if user.is_authenticated %}
         <div class="grid grid-cols-4 gap-y-10 gap-x-8">
-          <div>
-            <p id="desktop-dlperm-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-              DL Permission
-            </p>
-            <ul role="list" aria-labelledby="desktop-dlperm-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-              {% mfl_setting "NP" %}
-            </ul>
-          </div>
+          {% mfl_setting "NP" %}
+
           {% if user.is_staff %}
-            <div>
-              <p id="desktop-dlstaff-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                DL Staff
-              </p>
-              <ul role="list" aria-labelledby="desktop-dlstaff-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                {% mfl_setting "NS" %}
-              </ul>
-            </div>
+            {% mfl_setting "NS" %}
           {% endif %}
+
           {% if user.is_superuser %}
-            <div>
-              <p id="desktop-dladminlists-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                DL Admin Lists
-              </p>
-              <ul role="list" aria-labelledby="desktop-dladminlists-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                {% mfl_setting "NAL" %}
-              </ul>
-            </div>
-            <div>
-              <p id="desktop-dladmin-heading" class="font-medium text-gray-900 dark:text-jumbo-100">
-                DL Admin
-              </p>
-              <ul role="list" aria-labelledby="desktop-dladmin-heading" class="mt-6 space-y-6 sm:mt-4 sm:space-y-4">
-                {% mfl_setting "NA" %}
-              </ul>
-            </div>
+            {% mfl_setting "NAL" %}
+            {% mfl_setting "NA" %}
           {% endif %}
         </div>
       {% endif %}
